# Oriphim

./: .gitignore  AGENTS.md  ALERT_SYSTEM.md  ARCHITECTURE.md  BACKEND_TECHNICAL_SPEC.md  DEPLOYMENT.md  README.md  REPOSITORY_REPORT.md
cloud/app/: streamlit_app.py
cloud/supabase/: MIGRATION_INSTRUCTIONS.md
ibkr_bots/: .gitignore  README.md  __init__.py  connect_test.py  deploy_paper.py  main.py  requirements.txt
ibkr_bots/bots/: __init__.py  bot_A_putlite.py  bot_A_putlite_refactored.py  bot_B_buywrite.py  bot_C_condor.py  bot_interface.py
ibkr_bots/config/: .env.example  strategy.yaml  universe.json
ibkr_bots/core/: __init__.py  broker.py  crowd.py  events.py  exec.py  options.py  regime.py  risk.py  telemetry.py
ibkr_bots/dashboards/: app.py
ibkr_bots/ml/: __init__.py  features.py  labels.py  models.py
ibkr_bots/scripts/: connection_test.py  run_live.sh  run_paper.sh
ibkr_bots/tests/: integration_test.py
oriphim_runner/: Build-OriphimRunner.ps1  Debug-Step-By-Step.ps1  OriphimRunner-Simple.ps1  OriphimRunner.ps1  OriphimRunner_Fixed.ps1  README.md  build.bat  build.sh  package-lock.json  package.json  requirements-minimal.txt  requirements.txt
oriphim_runner/src/: app.js  broker_ibkr.py  engine.py  index.html  main.py  storage.py  styles.css  ui_manager.py  websocket_client.py
oriphim_runner/src-tauri/: Cargo.toml  tauri.conf.json
oriphim_runner/src-tauri/icons/: README.md
oriphim_runner/src-tauri/src/: main.rs
oriphim_web/Oriphim/: .env.example  README.md  deploy.sh  (+6 more)
runner/: main.py  requirements.txt
scripts/: deploy-schema.js
(+50 files in other folders)
